sqs local 실행 추가

--- a/serverless.yml
+++ b/serverless.yml
@@ -13,8 +13,8 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  region: eu-west-1
-  stage: dev
+  # region: eu-west-1
+  # stage: dev
   iamRoleStatements:
   - Effect: 'Allow'
     Action: 'sqs:*'
@@ -32,19 +32,13 @@ functions:
               - Arn
           batchSize: 10
           enabled: true
-  # second:
-  #   handler: second.hello
-  #   events:
-  #     - http:
-  #         method: get
-  #         path: second
 resources:
   Resources:
     TutorialSQS:
       Type: AWS::SQS::Queue
       Properties:
-        QueueName: MyFirstQueue.fifo
-        # FifoQueue: True
+        QueueName: ${self:custom.derived.QueueMainName}
+        FifoQueue: True
         MessageRetentionPeriod: 604800
         VisibilityTimeout: 60
         ReceiveMessageWaitTimeSeconds: 20
@@ -57,18 +51,14 @@ resources:
     TutorialSQSQDL:
       Type: AWS::SQS::Queue
       Properties:
-        QueueName: MyFirstQueueDl.fifo
-        # FifoQueue: True
+        QueueName: ${self:custom.derived.QueueDlName}
+        FifoQueue: True
 
 custom:
   derived:
     QueueMainName: MyFirstQueue.fifo
     QueueDlName: MyFirstQueueDl.fifo
   serverless-offline-sqs:
-    autoCreate: true # create queue if not exists
+    autoCreate: false # create queue if not exists
     apiVersion: "2012-11-05"
     endpoint: http://0.0.0.0:9324
-    region: eu-west-1
-    accessKeyId: root
-    secretAccessKey: root
-    skipCacheInvalidation: false
