--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,7 @@ service:
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
-  - serverless-offline-sqs
+  # - serverless-offline-sqs
   - serverless-offline
 
 provider:
@@ -55,9 +55,12 @@ resources:
         FifoQueue: True
 
 custom:
+  defaults:
+    sqsPrefix: ${self:service}-${self:custom.derived.stage}
   derived:
-    QueueMainName: MyFirstQueue.fifo
-    QueueDlName: MyFirstQueueDl.fifo
+    stage: ${opt:stage, env:SERVERLESS_STAGE, self:custom.defaults.stage}
+    QueueMainName: ${self:custom.defaults.sqsPrefix}-MyFirstQueue.fifo
+    QueueDlName: ${self:custom.defaults.sqsPrefix}-MyFirstQueueDl.fifo
   serverless-offline-sqs:
     autoCreate: false # create queue if not exists
     apiVersion: "2012-11-05"
