--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,26 @@
 service:
-  name: chosun-serverless-tutorial
+  name: chosun-tutorial-hglee
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
+
+provider:
+  name: aws
+  runtime: nodejs12.x
+  profile: hglee
+  region: ap-northeast-2
+  reservedConcurrency: 10
+  timeout: 30
+  logRetentionInDays: 30
+  memorySize: 1024
+  versionFunctions: false
+  iamRoleStatements:
+    - Effect: 'Allow'
+      Action: 's3:*'
+      Resource:
+        - Fn::Join: [ "/", [ 
+            { Fn::GetAtt: ["TutorialBucket", "Arn" ] }, "/*" 
+          ]]
 
 # Add the serverless-webpack plugin
 plugins:
@@ -10,19 +28,29 @@ plugins:
   - serverless-offline-s3
   - serverless-offline
 
-provider:
-  name: aws
-  runtime: nodejs12.x
+resources:
+  Resources:
+    TutorialBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:service}-${self:custom.derived.stage}-images
 
 functions:
   first:
     handler: first.hello
     events:
       - s3: 
-          bucket: photo
+          existing: true
+          bucket: { Ref: TutorialBucket }
           event: s3:ObjectCreated:*
+          rules:
+            - prefix: photo/
 
 custom:
+  defaults:
+      stage: sandbox
+  derived:
+    stage: ${opt:stage, env:SERVERLESS_STAGE, self:custom.defaults.stage}
   serverless-offline-s3:
     endpoint: http://0.0.0.0:9000
     accessKey: AKIAIOSFODNN7EXAMPLE
